# whiskey_cli

./: Cargo.toml
src/: main.rs
