[package]
name = "whiskey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
indicatif = "0.17.6"
nix = "0.26.2"
whiskey_python = {path="../whiskey_python"}
whiskey_wine_api = {path="../whiskey_wine_api"}
